--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,27 +5,29 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">Cơ khí ưu việt</a>
+            <a class="navbar-brand" href="#">LEAGUE STORE 77</a>
         </div>
         <ul class="nav navbar-nav">
             <li class="active"><a href="#">Trang chủ</a></li>
-            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1 <span class="caret"></span></a>
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Sản phẩm<span class="caret"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="#">Page 1-1</a></li>
                     <li><a href="#">Page 1-2</a></li>
                     <li><a href="#">Page 1-3</a></li>
                 </ul>
             </li>
-            <li><a href="#">Page 2</a></li>
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Bộ sưu tập<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Page 1-1</a></li>
+                    <li><a href="#">Page 1-2</a></li>
+                    <li><a href="#">Page 1-3</a></li>
+                </ul>
+            </li>
+            <li><a href="contact">Liên hệ</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-            <li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            <li><a href="signup"><span class="glyphicon glyphicon-user"></span> Đăng ký</a></li>
+            <li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Đăng nhập</a></li>
         </ul>
     </div>
 </nav>
-
-<div class="container">
-    <h3>Right Aligned Navbar</h3>
-    <p>The .navbar-right class is used to right-align navigation bar buttons.</p>
-</div>
