--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -3,8 +3,8 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <form action="/reset" method="POST">
-    <div>
-        <h1>RESET YOUR PASSWORD</h1>
+    <div class="container">
+        <h1>Tạo lại mật khẩu mới</h1>
         <input type="text" name="editEmail"></input>
         <button type="submit" , class="btn btn-teal btn-rounded btn-sm m-0">Send email</button>
     </div>
