--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,6 +1,6 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
 
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
@@ -8,19 +8,19 @@
             <a class="navbar-brand" href="#">LEAGUE STORE 77</a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Trang chủ</a></li>
+            <li class="active"><a href="/">Trang chủ</a></li>
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Sản phẩm<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">Page 1-1</a></li>
-                    <li><a href="#">Page 1-2</a></li>
-                    <li><a href="#">Page 1-3</a></li>
+                    <li><a href="#">Quần áo</a></li>
+                    <li><a href="#">Quần áo thể thao</a></li>
+                    <li><a href="#">Phụ kiện</a></li>
                 </ul>
             </li>
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Bộ sưu tập<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">Page 1-1</a></li>
-                    <li><a href="#">Page 1-2</a></li>
-                    <li><a href="#">Page 1-3</a></li>
+                    <li><a href="#">Hè</a></li>
+                    <li><a href="#">Thu đông</a></li>
+                    <li><a href="#">Phụ kiện</a></li>
                 </ul>
             </li>
             <li><a href="contact">Liên hệ</a></li>
