--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,35 +51,8 @@
     <div class="container">
         <%- include ('header'); -%>
     </div>
-
-    <div class="container">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                    <img src="/assets/ao2.png" alt="First slide" width="1080" height="240">
-                </div>
-                <div class="item">
-                    <img src="/assets/ao2.jpeg" alt="Second slide" width="1080" height="240">
-                </div>
-                <div class="item">
-                    <img src="/assets/ao2.png" alt="Third slide" width="1080" height="240">
-                </div>
-            </div>
-            <a class="left carousel-control" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-    </div>
+    
+    <%- include ('slideshow'); -%>
     
     <h2 class="new_product">SẢN PHẨM MỚI</h2>
 
@@ -90,7 +63,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text"></p>
-                  <a href="#" class="btn btn-primary">Add to cart</a>
+                  <a href="#" class="btn btn-primary btn-sm">Add to cart</a>
                 </div>
             </div>
         <% } %>
