--- a/views/slideshow.ejs
+++ b/views/slideshow.ejs
@@ -1,40 +1,27 @@
-<head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head> 
-
-<div class="slideshow-container">
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-        <div class="item active>
-            <img src="../public/img/sl1.jpg" alt="Winter" style="width:100%;">
+<div class="container">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="/assets/ao2.png" alt="First slide" width="1080" height="240">
+            </div>
+            <div class="item">
+                <img src="/assets/ao2.png" alt="Second slide" width="1080" height="240">
+            </div>
+            <div class="item">
+                <img src="/assets/ao2.png" alt="Third slide" width="1080" height="240">
+            </div>
         </div>
-
-        <div class="item">
-            <img src="../public/img/sl2.jpg" alt="Summer" style="width:100%;">
-        </div>
-    
-        <div class="item">
-            <img src="../public/img/sl3.jpg" alt="Spring" style="width:100%;">
-        </div>
-    </div>
-
-    <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left"></span>
+        <a class="left carousel-control" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right"></span>
+        <a class="right carousel-control" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
     </div>
