delete trash char

--- a/views/producttable.ejs
+++ b/views/producttable.ejs
@@ -121,7 +121,7 @@
                     console.log(productId);
                 });
 
-                var btnDel = document.getElementById("btn-delele-model");ßß
+                var btnDel = document.getElementById("btn-delele-model");
                 
                 console.log(btnDel);
     
