fix bug delete product

--- a/views/addproduct.ejs
+++ b/views/addproduct.ejs
@@ -25,38 +25,38 @@
         <div style="margin-left: 25%;" class="container">
             <form method="post" action="/addproduct">
                 <div class="form-group">
-                    <label for="editProductId">Product id</label>
-                    <input type="text" name="productId" class="form-control" id="editProductId" placeholder="ma san pham">
+                    <label for="editProductId"> Mã sản phẩm </label>
+                    <input type="text" name="productId" class="form-control" id="editProductId" placeholder="Mã sản phẩm">
                 </div>
 
                 <div class="form-group">
                     <label for="editProductName">Tên sản phẩm</label>
-                    <input type="text" name="name" class="form-control" id="editProductName" placeholder="ten san pham...">
+                    <input type="text" name="name" class="form-control" id="editProductName" placeholder="Tên sản phẩm">
                 </div>
 
                 <div class="form-group">
                     <label for="editProductDescription">Mô tả</label>
-                    <textarea type="textarea" id="editProductDescription" name="description" class="form-control" cols="92" rows="10" tabindex="101" placeholder="mo ta san pham"></textarea>
+                    <textarea type="textarea" id="editProductDescription" name="description" class="form-control" cols="92" rows="5" tabindex="101" placeholder="Mô tả"></textarea>
                 </div>
 
                 <div class="form-group">
                     <label for="editProductImage">Hình ảnh</label>
-                    <input type="text" name="image" class="form-control" id="editProductImage" placeholder="link hinh anh san pham">
+                    <input type="text" name="image" class="form-control" id="editProductImage" placeholder="Link ảnh">
                 </div>
                 
                 <div class="form-group">
                     <label for="editProductPrice">Giá</label>
-                    <input type="text" name="price" class="form-control" id="editProductPrice" placeholder="gia that">
+                    <input type="text" name="price" class="form-control" id="editProductPrice" placeholder="Giá chưa khuyến mãi">
                 </div>
         
                 <div class="form-group">
                     <label for="editProductBonusPrice">Giá đã khuyến mại</label>
-                    <input type="text" name="bonusPrice" class="form-control" id="editProductBonusPrice" placeholder="gia da khuyen mai">
+                    <input type="text" name="bonusPrice" class="form-control" id="editProductBonusPrice" placeholder="Giá đã khuyến mãi">
                 </div>
 
                 <div class="form-group">
                     <label for="editProductQuantity">Số lượng</label>
-                    <input type="text" name="quantity" class="form-control" id="editProductQuantity" placeholder="gia da khuyen mai">
+                    <input type="text" name="quantity" class="form-control" id="editProductQuantity" placeholder="Số lượng">
                 </div>
 
                 <button type="submit" class="btn btn-primary">Thêm</button>
