--- a/views/producttable.ejs
+++ b/views/producttable.ejs
@@ -22,6 +22,8 @@
             <h2 style="text-align: center;">Kho hàng</h2>
         </div>
 
+        
+
         <div class="container">
             <table class="table table-bordered">
                 <thead class="thead-dark">
@@ -75,7 +77,7 @@
                                 </td>
                                 <td>
                                     <a href="/editproduct/<%=data[i]._id %>" class="btn btn-primary" >Sửa</a>
-                                    <a href="" class="btn btn-primary" data-toggle="modal" data-id="<%=data[i]._id %>" data-target="#modal-delete-model">Xoá</a>
+                                    <a href="" class="btn btn-danger" data-toggle="modal" data-id="<%=data[i]._id %>" data-target="#modal-delete-model">Xoá</a>
                                 </td>
                             </tr>
                         <% } %>
@@ -84,6 +86,8 @@
             </table>
         </div>
 
+       
+       
         <!-- Modal -->
         <div class="modal fade" id="modal-delete-model" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
@@ -105,31 +109,28 @@
             </div>
         </div>
 
-        <form method="post" name="delele-form">
-        </form>
-
-        <script>
+        <div class="container">
+            <form method="post" name="hidden-form-delete" id="delete-form">
+            </form>
+        </div>
        
+        <script>
             document.addEventListener('DOMContentLoaded', function(){
                 var productId;
-                var deleteForm = document.forms['delete-form'];
+                var deleteForm = document.getElementById('delete-form');
+                console.log(deleteForm);
                 
-    
                 $('#modal-delete-model').on('show.bs.modal', function (event) {
                     var button = $(event.relatedTarget); // Button that triggered the modal
                     productId = button.data('id'); // Extract info from data-* attributes
                     console.log(productId);
-                });
 
-                var btnDel = document.getElementById("btn-delele-model");
-                
-                console.log(btnDel);
-    
-                btnDel.onclick = function() {
-                    console.log('button delete onclick');
-                    deleteForm.action = '/producttable/' + productId + '?_method=DELETE';
-                    deleteForm.submit();
-                } 
+                    var buttonDelete = document.getElementById('btn-delete-model');
+                        buttonDelete.onclick = function (){
+                        deleteForm.action = '/producttable/' + productId + '?_method=DELETE';
+                        deleteForm.submit();
+                    }
+                });
             });
         </script>
     </body>
