--- a/views/header.ejs
+++ b/views/header.ejs
@@ -23,6 +23,32 @@
                     <li><a href="#">Phụ kiện</a></li>
                 </ul>
             </li>
+
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Câu lạc bộ<span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#">Manchester United</a></li>
+                    <li><a href="#">Manchester City</a></li>
+                    <li><a href="#">Chelsea</a></li>
+                    <li><a href="#">Liverpool</a></li>
+                    <li><a href="#">West Ham</a></li>
+                    <li><a href="#">Arsenal</a></li>
+                    <li><a href="#">Wolves</a></li>
+                    <li><a href="#">Brighton</a></li>
+                    <li><a href="#">Crystal Palace</a></li>
+                    <li><a href="#">Tottenham</a></li>
+                    <li><a href="#">Everton</a></li>
+                    <li><a href="#">Leicester</a></li>
+                    <li><a href="#">Southampton</a></li>
+                    <li><a href="#">Brentford</a></li>
+                    <li><a href="#">Aston Villa</a></li>
+                    <li><a href="#">Watford</a></li>
+                    <li><a href="#">Leeds</a></li>
+                    <li><a href="#">Burnley</a></li>
+                    <li><a href="#">Norwich</a></li>
+                    <li><a href="#">Newcastle</a></li>
+                </ul>
+            </li>
+
             <li><a href="contact">Liên hệ</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
