--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,17 +13,21 @@
             align-items: center;
         }
         
-        @media screen and (max-height: 450px) {
+        .product-item {
+            margin-top: 15px;
         }
-
-        .new_product{
+        
+        @media screen and (max-height: 450px) {}
+        
+        .new_product {
             text-align: center;
         }
-        .populate_product{
+        
+        .populate_product {
             text-align: center;
         }
-
-        footer{
+        
+        footer {
             text-align: center;
             padding: 3px;
             background-color: DarkSalmon;
@@ -31,19 +36,18 @@
             position: relative;
             width: 100%;
         }
-
-        .card-img-top{
+        
+        .card-img-top {
             width: 100%;
             height: 15vw;
             object-fit: cover;
         }
-
-        .carousel-inner > .item > img,
-        .carousel-inner > .item > a > img {
+        
+        .carousel-inner>.item>img,
+        .carousel-inner>.item>a>img {
             width: 70%;
             margin: auto;
-         } 
-
+        }
     </style>
 </head>
 
@@ -51,67 +55,89 @@
     <div class="container">
         <%- include ('header'); -%>
     </div>
-    
+
     <%- include ('slideshow'); -%>
-    
-    <h2 class="new_product">SẢN PHẨM MỚI</h2>
 
-    <div class="container">
-        <%for(var i=0; i<12;i++) { %>
-            <div class="col-6 col-sm-4 col-md-3 p-2" style="width: 18rem;">
-                <img class="card-img-top" src="/assets/ao2.jpeg" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text"></p>
-                  <a href="#" class="btn btn-primary btn-sm">Add to cart</a>
-                </div>
+        <h2 class="new_product">SẢN PHẨM MỚI</h2>
+
+        <div class="container">
+            <div class="card-deck">
+                <%for(var i=0; i<product.length;i++) { %>
+                    <div class="col-6 col-sm-3">
+                        <div class="card product-item">
+                            <img class="card-img-top" src="<%= product[i].image %>" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">
+                                    <%= product[i].name %>
+                                </h5>
+                                <p class="card-text">
+                                    <%= product[i].description %>
+                                </p>
+                                <a href="/productdetail/<%= product[i]._id %>" class="btn btn-primary btn-sm">Detail</a>
+                                <a href="#" class="btn btn-warning btn-sm">Cart</a>
+                            </div>
+                        </div>
+                    </div>
+                    <% } %>
             </div>
-        <% } %>
 
-        <nav aria-label="Page navigation example">
-            <ul class="pagination">
-                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item"><a class="page-link" href="#">Next</a></li>
-            </ul>
-        </nav>
-    </div>
+        </div>
 
-    <h2 class="populate_product">SẢN PHẨM BÁN CHẠY</h2>
+        <div class="container">
+            <!-- get all number item from database then page panigate -->
+            <nav aria-label="Page navigation example">
+                <ul class="pagination">
+                    <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                    <%for(var i=1; i<=numItems;i++) { %>
+                        <li class="page-item">
+                            <a class="page-link" href="#">
+                                <%= i %>
+                            </a>
+                        </li>
+                        <!-- <li class="page-item"><a class="page-link" href="#">2</a></li>
+                    <li class="page-item"><a class="page-link" href="#">3</a></li> -->
+                        <% } %>
+                            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                </ul>
+            </nav>
+        </div>
 
-    
-    <div class="container">
-        <%for(var i=0; i<12;i++) { %>
-            <div class="col-6 col-sm-4 col-md-3 p-2" style="width: 18rem;">
-                <img class="card-img-top" src="/assets/ao1.jpeg" alt="Card image cap">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text"></p>
-                  <a href="#" class="btn btn-primary">Add to cart</a>
+        <h2 class="populate_product">SẢN PHẨM BÁN CHẠY</h2>
+
+        <div class="container">
+            <%for(var i=0; i<12;i++) { %>
+                <div class="col-6 col-sm-4 col-md-3 p-2" style="width: 18rem;">
+                    <img class="card-img-top" src="/assets/ao1.jpeg" alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text"></p>
+                        <div class="row">
+                            <a href="#" class="btn btn-primary btn-sm">Detail</a>
+                            <a href="#" class="btn btn-warning btn-sm">Cart</a>
+                        </div>
+                    </div>
                 </div>
-            </div>
-        <% } %>
+                <% } %>
 
-        <nav aria-label="Page navigation example">
-            <ul class="pagination">
-                <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                <li class="page-item"><a class="page-link" href="#">1</a></li>
-                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                <li class="page-item"><a class="page-link" href="#">Next</a></li>
-            </ul>
-        </nav>
-    </div>
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination">
+                            <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+                            <li class="page-item"><a class="page-link" href="#">1</a></li>
+                            <li class="page-item"><a class="page-link" href="#">2</a></li>
+                            <li class="page-item"><a class="page-link" href="#">3</a></li>
+                            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                        </ul>
+                    </nav>
+        </div>
 
-    
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
 
-    <footer>
-        <p> Copy right by CanhVV 2021 </p>  
-    </footer>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script src="http://getbootstrap.com/dist/js/bootstrap.min.js"></script>
+
+        <footer>
+            <p> Copy right by CanhVV 2021 </p>
+        </footer>
 </body>
+
 </html>
