--- a/views/productdetail.ejs
+++ b/views/productdetail.ejs
@@ -66,15 +66,19 @@
                                         <div class="mt-1">
                                             <div class="form-check form-check-inline pl-0">
                                                 <input type="radio" class="form-check-input" id="small" name="materialExampleRadios" checked>
-                                                <label class="form-check-label small text-uppercase card-link-secondary" for="small">Small</label>
+                                                <label class="form-check-label small text-uppercase card-link-secondary" for="small">S</label>
                                             </div>
                                             <div class="form-check form-check-inline pl-0">
                                                 <input type="radio" class="form-check-input" id="medium" name="materialExampleRadios">
-                                                <label class="form-check-label small text-uppercase card-link-secondary" for="medium">Medium</label>
+                                                <label class="form-check-label small text-uppercase card-link-secondary" for="medium">L</label>
                                             </div>
                                             <div class="form-check form-check-inline pl-0">
                                                 <input type="radio" class="form-check-input" id="large" name="materialExampleRadios">
-                                                <label class="form-check-label small text-uppercase card-link-secondary" for="large">Large</label>
+                                                <label class="form-check-label small text-uppercase card-link-secondary" for="large">XL</label>
+                                            </div>
+                                            <div class="form-check form-check-inline pl-0">
+                                                <input type="radio" class="form-check-input" id="extralarge" name="materialExampleRadios">
+                                                <label class="form-check-label small text-uppercase card-link-secondary" for="extralarge">XXL</label>
                                             </div>
                                         </div>
                                     </td>
