--- a/views/edituser.ejs
+++ b/views/edituser.ejs
@@ -1,40 +1,46 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 <style>
-    .form-group{
+    .form-group {
         align-items: center;
     }
 </style>
 
 <div class="container">
     <h3>Cập nhật tài khoản</h3>
-    <form action="/updateuser", method="POST">
+    <form action="/edituser/<%= user._id %>?_method=PUT">
+        <div class="form-group">
+            <label for="editUserId">Id</label>
+            <input type="text" class="form-control" id="editUserId" value="<%= user.userId %>" readonly>
+        </div>
+
         <div class="form-group">
             <label for="editUserName">Tên đăng nhập</label>
-            <input type="email" class="form-control" id="editUserName" aria-describedby="emailHelp">
-            <small id="emailHelp" class="form-text text-muted"></small>
+            <input type="text" class="form-control" id="editUserName" value="<%= user.name %>">
         </div>
 
         <div class="form-group">
-            <label for="editEmail">Email</label>
-            <input type="email" class="form-control" id="editEmail" aria-describedby="emailHelp" >
-            <small id="emailHelp" class="form-text text-muted"></small>
+            <label for="editPassword">Mật khẩu</label>
+            <input type="text" class="form-control" id="editUserName" value="<%= user.password %>">
         </div>
 
-        <div class="form-group">
-            <label for="editAddress">Địa chỉ</label>
-            <input type="email" class="form-control" id="editAddress" aria-describedby="emailHelp" >
-            <small id="emailHelp" class="form-text text-muted"></small>
+        <div class="form-group ">
+            <label for="editEmail ">Email</label>
+            <input type="text " class="form-control " id="editEmail" value="<%= user.email %>">
         </div>
 
-        <div class="form-group">
-            <label for="editPhoneNumber">Số điện thoại</label>
-            <input type="email" class="form-control" id="editPhoneNumber" aria-describedby="emailHelp" >
-            <small id="emailHelp" class="form-text text-muted"></small>
+        <div class="form-group ">
+            <label for="editAddress ">Địa chỉ</label>
+            <input type="email " class="form-control " id="editAddress" value="<%= user.addr %>">
         </div>
 
-        <button type="submit" class="btn btn-primary">Cập nhật</button>
+        <div class="form-group ">
+            <label for="editPhoneNumber ">Số điện thoại</label>
+            <input type="email " class="form-control " id="editPhoneNumber" value="<%= user.phone%>">
+        </div>
+
+        <button type="submit" class="btn btn-primary ">Cập nhật</button>
     </form>
-</div>
+</div> -->
