--- a/views/index.ejs
+++ b/views/index.ejs
@@ -41,6 +41,7 @@
             width: 100%;
             height: 15vw;
             object-fit: cover;
+            margin-top: 15px;
         }
         
         .carousel-inner>.item>img,
@@ -76,7 +77,9 @@
                             </div>
                             <div class="card-footer">
                                 <a href="/productdetail/<%= product[i]._id %>" class="btn btn-primary btn-sm">Detail</a>
-                                <a href="#" class="btn btn-warning btn-sm">Cart</a>
+                                <a href="#" class="btn btn-success btn-sm">
+                                    <img src="/assets/carts.png" />
+                                </a>
                             </div>
                         </div>
                     </div>
