update adduser, edituser page

--- a/views/adduser.ejs
+++ b/views/adduser.ejs
@@ -26,7 +26,7 @@
     </div>
 
     <div style="margin-left: 25%;" class="container">
-        <form method="post" action="/adduser">
+        <form method="POST" action="/adduser">
             <div class="form-group">
                 <label for="editUserId"> User ID </label>
                 <input type="text" name="userId" class="form-control" id="editUserId" placeholder="Id">
@@ -49,12 +49,12 @@
 
             <div class="form-group">
                 <label for="editUserEmail">Email</label>
-                <input type="text" name="email " class="form-control " id="editUserEmail" placeholder="Email">
+                <input type="text" name="email" class="form-control " id="editUserEmail" placeholder="Email">
             </div>
 
             <div class="form-group ">
                 <label for="editUserPhone">Phone number</label>
-                <input type="text" name="phone" class="form-control " id="editUserPhone " placeholder="Phone ">
+                <input type="text" name="phone" class="form-control" id="editUserPhone" placeholder="Phone">
             </div>
 
             <button type="submit" class="btn btn-primary ">Add</button>
