update something: edit user, delete user, edit product

--- a/views/adduser.ejs
+++ b/views/adduser.ejs
@@ -14,6 +14,10 @@
             width: 50%;
         }
         
+        input[type="email"] {
+            width: 50%;
+        }
+        
         textarea[type="textarea"] {
             width: 50%;
         }
@@ -49,7 +53,7 @@
 
             <div class="form-group">
                 <label for="editUserEmail">Email</label>
-                <input type="text" name="email" class="form-control " id="editUserEmail" placeholder="Email">
+                <input type="email" name="email" class="form-control " id="editUserEmail" placeholder="Email">
             </div>
 
             <div class="form-group ">
