--- a/views/edituser.ejs
+++ b/views/edituser.ejs
@@ -10,35 +10,39 @@
 
 <div class="container">
     <h3>Cập nhật tài khoản</h3>
-    <form action="/edituser/<%= user._id %>?_method=PUT">
+    <form method="post" action="/edituser/<%= user._id %>?_method=PUT">
         <div class="form-group">
             <label for="editUserId">Id</label>
-            <input type="text" class="form-control" id="editUserId" value="<%= user.userId %>" readonly>
+            <input type="text" name="userId" class="form-control" id="editUserId" value="<%= user.userId %>" readonly>
         </div>
 
         <div class="form-group">
             <label for="editUserName">Tên đăng nhập</label>
-            <input type="text" class="form-control" id="editUserName" value="<%= user.name %>">
+            <input type="text" name="name" class="form-control" id="editUserName" value="<%= user.name %>">
         </div>
 
         <div class="form-group">
             <label for="editPassword">Mật khẩu</label>
-            <input type="text" class="form-control" id="editUserName" value="<%= user.password %>">
+            <input type="text" name="password" class="form-control" id="editUserName" value="<%= user.password %>">
         </div>
 
-        <div class="form-group ">
+        <div class="form-group">
             <label for="editEmail ">Email</label>
-            <input type="text " class="form-control " id="editEmail" value="<%= user.email %>">
+            <input type="email" name="email" class="form-control" id="editEmail" value="<%= user.email %>">
         </div>
 
-        <div class="form-group ">
-            <label for="editAddress ">Địa chỉ</label>
-            <input type="email " class="form-control " id="editAddress" value="<%= user.addr %>">
+        <div class="form-group">
+            <label for="editAddress">Địa chỉ</label>
+            <input type="text" name="addr" class="form-control" id="editAddress" value="<%= user.addr %>">
         </div>
 
-        <div class="form-group ">
-            <label for="editPhoneNumber ">Số điện thoại</label>
-            <input type="email " class="form-control " id="editPhoneNumber" value="<%= user.phone%>">
+        <div class="form-group">
+            <label for="editPhoneNumber">Số điện thoại</label>
+            <input type="text" name="phone" class="form-control" id="editPhoneNumber" value="<%= user.phone%>">
+        </div>
+
+        <div class="form-group">
+            <input type="date" id="updatedAt" name="updatedAt">
         </div>
 
         <button type="submit" class="btn btn-primary ">Cập nhật</button>
