update display price

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -24,28 +24,17 @@
                 </ul>
             </li>
 
-            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Câu lạc bộ<span class="caret"></span></a>
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Giải đấu<span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="#">Manchester United</a></li>
-                    <li><a href="#">Manchester City</a></li>
-                    <li><a href="#">Chelsea</a></li>
-                    <li><a href="#">Liverpool</a></li>
-                    <li><a href="#">West Ham</a></li>
-                    <li><a href="#">Arsenal</a></li>
-                    <li><a href="#">Wolves</a></li>
-                    <li><a href="#">Brighton</a></li>
-                    <li><a href="#">Crystal Palace</a></li>
-                    <li><a href="#">Tottenham</a></li>
-                    <li><a href="#">Everton</a></li>
-                    <li><a href="#">Leicester</a></li>
-                    <li><a href="#">Southampton</a></li>
-                    <li><a href="#">Brentford</a></li>
-                    <li><a href="#">Aston Villa</a></li>
-                    <li><a href="#">Watford</a></li>
-                    <li><a href="#">Leeds</a></li>
-                    <li><a href="#">Burnley</a></li>
-                    <li><a href="#">Norwich</a></li>
-                    <li><a href="#">Newcastle</a></li>
+                    <li><a href="#">Ngoại hạng anh</a></li>
+                    <li><a href="#">La Liga</a></li>
+                    <li><a href="#">Bundesliga</a></li>
+                    <li><a href="#">League 1</a></li>
+                    <li><a href="#">Seria A</a></li>
+                    <li><a href="#">World cup</a></li>
+                    <li><a href="#">UEFA Champions league</a></li>
+                    <li><a href="#">UEFA Europa league</a></li>
+                    <li><a href="#">Euro</a></li>
                 </ul>
             </li>
 
